--- a/test/fixtures/images.yml
+++ b/test/fixtures/images.yml
@@ -1,2 +1,13 @@
+# == Schema Information
+#
+# Table name: images
+#
+#  id         :integer          not null, primary key
+#  image      :string
+#  md5        :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 one:
   image: MyString
