--- a/test/fixtures/notes.yml
+++ b/test/fixtures/notes.yml
@@ -1,3 +1,13 @@
+# == Schema Information
+#
+# Table name: notes
+#
+#  id         :integer          not null, primary key
+#  content    :text
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 unordered_task_list:
   content: "- [ ] Task 1\n- [ ] Task 2"
 
