--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ rvm:
 install:
   - gem install rainbow -v '2.2.1'
   - bundle install
-  - RAILS_ENV=test bundle exec rake --trace db:create test
+  - RAILS_ENV=test bundle exec rake db:setup
 script:
-  - RAILS_ENV=test bundle exec rake --trace db:migrate test
   - bin/test
   - codeclimate-test-reporter
