Scope notes to users. Fix cops

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@
 AllCops:
   Exclude:
   - vendor/**/*
-  - db/**/*
+  - db/schema.rb
   - Gemfile.lock
   TargetRubyVersion: 2.4
 Lint/AmbiguousOperator:
